--- a/style1.css
+++ b/style1.css
@@ -7,7 +7,6 @@ body{
 main {
     display: flex;
     justify-content: center;
-    
 }
 .Top-banner {
     display: flex;
@@ -38,7 +37,7 @@ main {
 #text {
     padding-bottom: 30px;
 }
-#button1 {
+.article a {
     text-decoration: none;
     background-color: red;
     padding: 16px 25px;
@@ -53,12 +52,12 @@ main {
 
 .select {
     background-color: black;
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     margin-top: 10%;
     margin-right: 50px;
-    margin-left: 25px;
+    margin-left: 20px;
     width: 322px;
     height: 392px;
     border-radius: 10px;
@@ -96,11 +95,22 @@ main {
     margin-bottom: 5%;
     margin-left: 100px;
 }
+.flag {
+    display: flex;
+    gap: 30px;
+    padding: 10px;
+    
+    
+}
 .blog {
     width: 312px;
     height: 362px;
+    padding-left: 20px;
+    padding-top: 25px;
     margin-top: 20px;
     margin-bottom: 20px;
+    border: 2px solid lightgray;
+    border-radius: 5px;
 }
 .blog p {
     display: inline;
@@ -118,7 +128,9 @@ footer {
     background-color: black;
     margin: 0%;
     list-style: none;
-    text-align: center;   
+    text-align: center;
+    overflow: hidden;
+    
 }
 footer h1 {
     padding-top: 70px;
@@ -127,9 +139,11 @@ footer h1 {
 .contact {
     display: flex;
     justify-content: center;
-    gap: 25px;
+    padding: 50px;
+    gap: 40px;
     color: #B9B9B9;
 }
+
 /*-----------
   Media Query 
  ------------*/
@@ -180,11 +194,9 @@ footer h1 {
         flex-wrap: wrap;
     }
 }
- 
-/* Mobile Devices */
 
+/* Mobile Devices */
 @media only screen and (max-width: 688px) {
-   
     /* Top Banner  */
     main { 
         width: 100%;
@@ -196,6 +208,7 @@ footer h1 {
         align-items: center;
         width: 350px;
         height: 450px;
+        font-size: 8px;
         text-align: center;
         padding: 0%;
         margin: 0%;
@@ -246,14 +259,17 @@ footer h1 {
         justify-content: center;
     }
     .blog {
-        padding: 0%;
+        margin-top: 100px;
+        padding-top: 0;
     }
     /* footer */
     footer {
         height: auto;
+        
     }
     .contact {
         flex-direction: column;
+        
     }
 
 }
